--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     compile 'commons-io:commons-io:2.6'
     compile 'org.apache.commons:commons-lang3:3.8.1'
 
+    // for compiling with JDK 11
+    compile 'javax.xml.bind:jaxb-api:2.3.1'
+    compile 'com.sun.xml.bind:jaxb-impl:2.3.2'
+    compile 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+
     //testCompile "junit:junit:4.12"
     //testCompile "com.github.tomakehurst:wiremock:2.1.7"
 }
