--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,10 @@ dependencies {
     compile 'com.sun.xml.bind:jaxb-impl:2.3.2'
     compile 'com.sun.xml.bind:jaxb-core:2.3.0.1'
 
-    //testCompile "junit:junit:4.12"
-    //testCompile "com.github.tomakehurst:wiremock:2.1.7"
+    //testCompile 'junit:junit:4.13'
+    //testCompile 'com.github.tomakehurst:wiremock:2.1.7'
 }
 
 wrapper {
-    gradleVersion = '4.10.3'
+    gradleVersion = '5.6.4'
 }
