--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
-  - oraclejdk8
+# started to fail, replace by openjdk8  - oraclejdk8
+  - openjdk8
   - oraclejdk11
 # not available yet  - openjdk11
 
