--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
+dist: bionic
 language: java
 jdk:
-# started to fail, replace by openjdk8  - oraclejdk8
   - openjdk8
-  - oraclejdk11
-# not available yet  - openjdk11
+  - openjdk11
 
 before_install:
- - chmod +x gradlew
+ - chmod +x gradlew gradle/wrapper/gradle-wrapper.jar
+
+install: 
+- gradle wrapper
+- ./gradlew checkSnapshotDependencies compileJava
 
 script:
   - ./gradlew buildPlugin
