--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>org.dstadler.intellij.automation</id>
   <name>REST Automation</name>
-  <version>1.0.7</version>
+  <version>1.0.8</version>
   <vendor email="dominik.stadler@gmx.at" url="http://dstadler.org">dstadler.org</vendor>
 
   <description><![CDATA[
@@ -12,6 +12,7 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      1.0.8 - Switch to Java 11 and IntelliJ 2020.3
       1.0.7 - Update libraries and adjust for recent IntelliJ
       1.0.6 - Update libraries
       1.0.5 - Update libraries and Gradle wrapper version
