--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,10 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
-    }
-}
-
 plugins {
-    id 'org.jetbrains.intellij' version '0.6.5'
+	// https://github.com/JetBrains/gradle-intellij-plugin
+    id 'org.jetbrains.intellij' version '1.3.0'
 }
 
 repositories {
     mavenCentral()
-    //maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
 }
 
 apply plugin: 'idea'
@@ -27,30 +20,30 @@ compileJava {
 }
 
 intellij {
-    version '2020.3'
-    type 'IC'
-    pluginName 'IntelliJ Automation Plugin'
-    sameSinceUntilBuild false
-    updateSinceUntilBuild false
-    downloadSources false
+	version='2020.3'
+    type='IC'
+    pluginName='IntelliJ Automation Plugin'
+    sameSinceUntilBuild=false
+    updateSinceUntilBuild=false
+    downloadSources=false
 }
 
 group 'org.dstadler'
-version '1.0.9'   // plugin version
+version '1.0.10'   // plugin version
 
 dependencies {
-    //compile fileTree(dir: 'lib', include: '*.jar')
-    compile 'org.dstadler:commons-dost:1.0.0.33'
-    compile 'commons-io:commons-io:2.11.0'
-    compile 'org.apache.commons:commons-lang3:3.12.0'
+    //implementation fileTree(dir: 'lib', include: '*.jar')
+    implementation 'org.dstadler:commons-dost:1.0.0.33'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     // for compiling with JDK 11
-    compile 'javax.xml.bind:jaxb-api:2.3.1'
-    compile 'com.sun.xml.bind:jaxb-impl:2.3.3'
-    compile 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'
+    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
 
-    //testCompile 'junit:junit:4.13.2'
-    //testCompile 'com.github.tomakehurst:wiremock:2.1.7'
+    //testImplementation 'junit:junit:4.13.2'
+    //testImplementation 'com.github.tomakehurst:wiremock:2.1.7'
 }
 
 wrapper {
