--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -6,12 +6,12 @@ name: Check IntelliJ-Automation-Plugin
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, main ]
   # Allows to run from the Actions tab
   workflow_dispatch:
 
 jobs:
   build-and-test:
-    uses: centic9/actions/.github/workflows/gradle-build.yml@3
+    uses: centic9/actions/.github/workflows/gradle-build.yml@7
