--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	// https://github.com/JetBrains/gradle-intellij-plugin
-    id 'org.jetbrains.intellij' version '1.16.1'
+    id 'org.jetbrains.intellij' version '1.17.3'
 }
 
 repositories {
@@ -12,15 +12,15 @@ apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'java'
 apply plugin: 'base'
 
-tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
+tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
 
 compileJava {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 intellij {
-	version='2020.3'
+	version='2022.3'
     type='IC'
     pluginName='IntelliJ Automation Plugin'
     sameSinceUntilBuild=false
@@ -34,7 +34,7 @@ version '1.0.10'   // plugin version
 dependencies {
     //implementation fileTree(dir: 'lib', include: '*.jar')
     implementation 'org.dstadler:commons-dost:1.3.4'
-    implementation 'commons-io:commons-io:2.17.0'
+    implementation 'commons-io:commons-io:2.18.0'
     implementation 'org.apache.commons:commons-lang3:3.17.0'
 
     // for compiling with JDK 11
